Fix bug in virtualized GL context state management upon creation.

Because the first MakeCurrent call against a virtual GL context leaves
the real context state indeterminate (since the GLES2Decoder isn't
initialized and by definition neither is the GLStateRestorer), force
it to be made current again after initialization.

This fixes a longstanding bug where if the next GLES2Decoder to do
significant work was the same one that was just created, it would do
this work with the majority of the real GL context state set to that
of the previous virtual GL context.

BUG=694359
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2862443002
Cr-Commit-Position: refs/heads/master@{#469007}

Former-commit-id: 1d44ab0e3d0a7cd05ce1da956bb87a85a8b88174